feat(dashboard): add global filters and widget linkage